# animal-sound

./: CMakeLists.txt  LICENSE  README.md
include/: animal-config.hpp  animal-factory.hpp  animal.hpp
src/: CMakeLists.txt  animal-factory.cpp  cat.cpp  dog.cpp
src/include/: cat.hpp  dog.hpp
test/: CMakeLists.txt  main.cpp
